spu-pgs: Fix array memory leak

https://bugzilla.gnome.org/show_bug.cgi?id=758517